<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fire-Alert:Promethean Star</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_fire_alert_splash">Fire-Alert:Promethean Star</string>
    <string name="FireAlertLogo">FireAlertLogo</string>
    <string name="FireAlertName">Fire-Alert:Promethean Star</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="email_prompt">Username:</string>
    <string name="password_prompt">Password:</string>
    <string name="login_button_text">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_activity_main_menu">Fire Alert</string>
    <string name="title_menu_detail">Menu Detail</string>
    <string name="title_menu_list">Menus</string>
    <string name="signOut">Sign Out</string>
    <string name="username_default">Guest</string>
    <string name="progress_default">0/0</string>
    <string name="completed_contracts_string">Inspections Completed</string>
    <string name="due_today_string">Today</string>
    <string name="due_next_week_string">Next Week</string>
    <string name="due_next_month">Next Month</string>
    <string name="reports_waiting_to_be_sent_string">Reports Pending:</string>
    <string name="Inspect_string">Inspect</string>
    <string name="title_activity_inspection_view">Inspections</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_inspection_overview">InspectionOverview</string>
    <string name="title_activity_equipment_inspection_list">EquipmentInspectionList</string>
    <string name="title_activity_inspection_overview_v2">InspectionOverviewV2</string>
    <string name="title_activity_inspection_form">Inspection Form</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="idString">ID:</string>
    <string name="address_label">Address:</string>
    <string name="floors_label">Floors:</string>
    <string name="rooms_label">Rooms:</string>
    <string name="items_label">Items:</string>
    <string name="title_room_list">Rooms To Be Inspected</string>
    <string name="numOfEl">Number of Elements: </string>
    <string name="RoomLabel">"Room: "</string>
    <string name="start_inspection">Start Inspection</string>
    <string name="select_equipment">Select</string>
    <string name="submit_building">Submit Building</string>
    <string name="ip_address">IP Address:</string>
    <string name="port">Port:</string>
    <string name="scan">Scan</string>
    <string name="send">Send</string>
    <string name="connect">Test Connection</string>
    <string name="title_activity_send_controller">Send Data</string>
    <string name="title_activity_display_list">DisplayListActivity</string>
    <string name="title_activity_display_locations">List of Locations</string>
    <string name="title_activity_settings_controller">SettingsController</string>
    <string name="title_activity_display_specific_client_location">DisplaySpecificClientLocationActivity</string>

</resources>
