<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ip_address"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/ipText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/port"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/portText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:inputType="number"
        android:maxLength="5"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/connectedView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Not Connected"
            android:textColor="@color/red"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/connectButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/connect"
            android:onClick="connectClick" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send"
            android:onClick="sendClick" />
    </LinearLayout>

</LinearLayout>
<ListView android:id="@+id/left_drawer"
	        android:layout_width="240dp"
	        android:layout_height="match_parent"
	        android:layout_gravity="start"
	        android:choiceMode="singleChoice"
	        android:divider="@color/grey"
	        android:dividerHeight="1dp"
	        android:background="@color/light_grey" />
</android.support.v4.widget.DrawerLayout>
