<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="roomItemListener"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/roomName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin"
        android:text="@string/RoomLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
            android:id="@+id/RoomNameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_toRightOf="@+id/roomName"
            android:text="TEST2"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/RoomIDLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/default_margin_2x"
            android:text="@string/idString"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/RoomIDValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_toRightOf="@+id/RoomIDLabel"
            android:text="Tes2"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/numOfElLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin_2x"
            android:text="@string/numOfEl"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/numOfElementsValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
			android:layout_toRightOf="@+id/numOfElLabel"
            android:text="Test"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

</LinearLayout>
